Removed dropbox and hopefully fixed scrolling on iOS

--- a/public/main.css
+++ b/public/main.css
@@ -34,6 +34,7 @@ body::-webkit-scrollbar {
     margin-top: 60px;
     padding: 0px 30px 100px;
     position: relative;
+    -webkit-overflow-scrolling: touch;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
 }
